[tool.poetry]
name = "发票工具"
version = "0.1.0"
description = ""
authors = ["gaojunxin <gaojunxin2283@pansoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pdfplumber = "^0.11.4"
xlwt = "^1.3.0"
pyautogui = "^0.9.54"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
